# ops-agents

./: .gitignore  README.md
.github/workflows/: pr-build.yml  release.yml
UI/: index.html  package-lock.json  package.json  vite.config.ts
UI/src/: App.tsx
UI/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
UI/src-tauri/capabilities/: default.json
UI/src-tauri/src/: main.rs
UI/src/components/: AgentChat.tsx  AuthGate.tsx  MessageBubble.tsx  TabBar.tsx
UI/src/hooks/: useClaudeAuth.ts
UI/src/styles/: app.css
product-analytics-agent/: .mcp.json  CLAUDE.md
product-analytics-agent/agents/: product-analytics.md
product-analytics-agent/mcp/pendo/: package-lock.json  package.json  server.js
product-analytics-agent/skills/pendo/: SKILL.md
release-ops-agent/: CLAUDE.md
