[package]
name = "ops-agents"
version = "0.1.0"
description = "Ops Agents - Internal AI agent hub"
authors = ["ops-team"]
edition = "2021"

[[bin]]
name = "ops-agents"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["macos-private-api"] }
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
